inst/css/styles.css
body {
  font-size: small !important;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
  line-height: 1.42857143 !important;
  margin: 0 !important;
  max-width: none !important;
  min-width: none !important;
  padding: 0 !important; /* modal ui changes workaround: https://stackoverflow.com/questions/63938194/r-shiny-app-width-shrinks-after-i-close-the-modal */
}


h1 {
  font-weight: bold; /* modal ui changes to bold; default set to bold */
}

div[id$="-sidebar"] {
  width: 35%;
  min-width: 250px;
  float: left;
  transition: width 0.3s;
  position: relative;
  padding-bottom: 10px;
  overflow: auto;
}

div[id$="-sidebar"].collapsed {
  width: 0;
  min-width: 0;
  overflow: hidden;
}

div[id$="-treeNavigator"] {
  overflow: inherit;
}

div[id$="-main_panel"] {
  transition: margin-left 0.3s;
}

div[id$="-divider"] {
  width: 1.5px;
  margin-left: 10px;
  background-color: lightgrey;
  float: left;
  position: relative;
}

button[id$="-toggle_sidebar"] {
  position: relative;
  top: 50%;
  margin-right: -11.5px;
  transform: translateY(-50%);
  background-color: lightgrey;
  color: black;
  border: none;
  padding: 4px;
  height: 50px;
  cursor: pointer;
  transition: right 0.3s;
  font-size: 8px;
  z-index: 1;
  border-radius: 0;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
}

div[id$="-sidebar"].collapsed + div[id$="-divider"] {
  margin-left: -11.5px;
}


div[id$="-content"] {
  display: flex;
  flex: 1;
  padding: 10px;
  overflow-y: hidden;
}

div[id$="-center_content"] {
  display: flex;
  flex-direction: column;
  align-items: center !important;
  justify-content: center !important;
}


div[id$="-main_container"] {
  display: flex;
  flex-direction: column;
  height: 100vh;
  width:100%;
  min-width: 400px;
  overflow: auto;
}


.logo-img {
  margin-right: -15px !important;
  background-color: transparent; /* modal ui changes workaround: https://stackoverflow.com/questions/63938194/r-shiny-app-width-shrinks-after-i-close-the-modal */
}



.selectize-input {
  word-wrap: break-word;
  word-break: break-word;
}

/*https://github.com/selectize/selectize.js/issues/377#issuecomment-189724525 different ways to hide overflow */
.selectize-input .item {
  max-width: 90%;
}

.selectize-dropdown {
 word-wrap : break-word;
}

.selectize-dropdown [data-selectable] {
  padding-left: 5px;
}

.inline-selectize {
  display: flex;
  gap: 10px;
}

.shiny-panel-conditional{
  align-items: center;
  display: flex;
  flex-direction: column;
}


.grid-container-depth-0 {
  /*display: grid;*/
  align-items: center;
  padding-left: 15px;
}

.grid-items {
  display: grid;
  column-gap: 10px;
  grid-template-columns: 67px minmax(100px, 1fr) minmax(125px, 1fr) minmax(50px, auto); /*minmax(100px, auto) */
  margin-bottom: 15px;
  width: 100%;
  transition: 0.5s;
}


.item-b {
  white-space: nowrap;
}

.flex-container {
    display: flex;
    align-items: center;
}

.header-padding {
    padding-right: 5px;
}

.preview-button {
    height: 17px !important;
    font-size: 50% !important;
    padding: 1px 2px 0px 2px !important;
    color: #5f5f5f !important;
}

.treejs-label {
    word-break: break-all;
    word-wrap: break-word;
}

.disabled-btn {
  background-color: lightgrey !important;
  color: white !important;
  cursor: not-allowed !important;
  pointer-events: none !important;
}

.enabled-btn {
  color: black !important;
  cursor: pointer !important;
}

.input-error {
  border-color: red !important;
}

